<resources>
    <string name="app_name">YTÜ Mezunları</string>
    <string name="email">E-posta</string>
    <string name="password">Şifre</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="change_password">Şifre Değiştir</string>
    <string name="grad_year_text">Mezuniyet Yılı</string>
    <string name="go_back">Geri Dön</string>
    <string name="full_app_logo">Full app logo</string>
    <string name="enrollment_year">Giriş Yılı</string>
    <string name="set_profile_pic">Fotoğraf Yükle</string>
    <string name="profilepic_update">Profil resmi yüklemek için basınız.</string>
    <string name="select_photo">Resim Seç</string>
    <string name="lisans">Lisans</string>
    <string name="lisans_ustu">Lisans Üstü</string>
    <string name="doktora">Doktora</string>
    <string name="phone_number">Telefon Numarası</string>
    <string name="company">Şirket</string>
    <string name="city">Şehir</string>
    <string name="country">Ülke</string>
    <string name="save_profile">Profili Kaydet</string>
    <string name="education_level">Eğitim Durumu</string>
    <string name="update_profile">Profili Güncelle</string>
    <string name="go_back_to_main">Ana Menüye Dön</string>
    <string name="my_profile">Profilim</string>
    <string name="grad_search">Mezun Arama</string>
    <string name="noticeboard">Duyurular</string>
    <string name="media_wall">Paylaşımlar</string>
    <string name="name_surname">Ad Soyad</string>
    <string name="job">Çalıştığı Yer</string>
    <string name="unemployed">İşsiz</string>
    <string name="unspecified">Belirtilmemiş</string>
    <string name="search">Ara</string>
    <string name="date">Tarih</string>
    <string name="headline">Başlık</string>
    <string name="create_new_notice">Yeni Duyuru Oluştur</string>
    <string name="date_of_today">Bugünün Tarihi</string>
    <string name="select_end_date">Bitiş Tarihi</string>
    <string name="enter_headling">Başlık</string>
    <string name="notice">Duyuru</string>
    <string name="notice_date">Duyuru Tarihi</string>
    <string name="notice_expiration_date">Duyuru Bitiş Tarihi</string>
    <string name="remove_media">Medyayı Kaldır</string>
    <string name="upload_media">Medya Yükle</string>
    <string name="upload">Yükle</string>
    <string name="image_description">Resim açıklaması</string>
    <string name="cancel">İptal Et</string>
    <string name="reset">Sıfırla</string>
    <string-array name="grad_years">
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
    </string-array>
</resources>