<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NoticeBoardSetupActivity">

    <EditText
        android:id="@+id/noticesetup_t_currentDate"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:text="@string/date_of_today"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/noticesetup_et_expirationdate"
        android:layout_width="190dp"
        android:layout_height="50dp"
        android:ems="10"
        android:text=""
        android:hint="@string/select_end_date"
        android:inputType="none"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:id="@+id/noticesetup_cl_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/noticesetup_t_currentDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <EditText
            android:id="@+id/noticesetup_et_headline"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/enter_headling"
            android:inputType="text"
            android:text=""
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/noticesetup_et_notice"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:gravity="bottom"
            android:hint="@string/notice"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/noticesetup_b_create"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/create_new_notice"
        app:layout_constraintTop_toBottomOf="@id/noticesetup_cl_notice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
         />

    <Button
        android:id="@+id/noticesetup_b_goback"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/go_back"
        app:layout_constraintTop_toBottomOf="@id/noticesetup_b_create"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"/>

    <ProgressBar
        android:id="@+id/noticesetup_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/noticesetup_b_goback"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingTop="5dp"
        android:visibility="gone"/>




</androidx.constraintlayout.widget.ConstraintLayout>