<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileSetupActivity">

    <ImageView
        android:id="@+id/profilesetup_i_profilepic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/profilepic_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        app:srcCompat="@drawable/empty_profile_pic" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_i_profilepic"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/profilesetup_text_name"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/name"
            android:gravity="center"/>

        <EditText
            android:id="@+id/profilesetup_et_name"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_name"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="name"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_surname"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_name"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/profilesetup_text_surname"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="50dp"
            android:text="@string/surname"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_surname"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/profilesetup_et_surname"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_surname"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:importantForAutofill="no"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_surname"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/profilesetup_text_email"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="50dp"
            android:text="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/profilesetup_et_email"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:text=""
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_email"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="emailAddress" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_phone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_email"
        app:layout_constraintVertical_bias="0.01"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/profilesetup_text_phone"
            android:layout_width="100dp"
            android:gravity="center"
            android:layout_height="50dp"
            android:text="@string/phone_number"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_phone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/profilesetup_et_phone"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="05551234567"
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_phone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:autofillHints="emailAddress"
            tools:ignore="HardcodedText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_enrollmentime"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_phone">

        <TextView
            android:id="@+id/profilesetup_text_enrollmentime"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/enrollment_year"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_sp_enrollment"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/profilesetup_sp_enrollment"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_enrollmentime"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_grad_time"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_enrollmentime">

        <TextView
            android:id="@+id/profilesetup_text_grad_time"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/grad_year_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_sp_grad_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/profilesetup_sp_grad_time"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/profilesetup_text_grad_time"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_education"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_grad_time">


        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <RadioButton android:id="@+id/radio_lisans"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/lisans"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_lisans2"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/lisans_ustu"
                android:textSize="12sp"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton android:id="@+id/radio_doktora"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:text="@string/doktora"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profilesetup_cl_job"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_education"
        >

        <EditText
            android:id="@+id/profilesetup_et_job_country"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_job_city"
            />

        <EditText
            android:id="@+id/profilesetup_et_job_city"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/city"
            app:layout_constraintStart_toEndOf="@id/profilesetup_et_job_country"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/profilesetup_et_job_company"
             />


        <EditText
            android:id="@+id/profilesetup_et_job_company"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:hint="@string/company"
            app:layout_constraintStart_toEndOf="@id/profilesetup_et_job_city"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
             />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/profilesetup_button_saveprofile"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/save_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_cl_job"
        android:layout_marginTop="10dp" />

    <ProgressBar
        android:id="@+id/profilesetup_progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/profilesetup_button_saveprofile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>