<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MediaActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/media_cl"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/media_profile_pic"
            android:layout_width="25dp"
            android:layout_height="25dp"
            app:srcCompat="@drawable/empty_profile_pic"
            app:layout_constraintTop_toBottomOf="@id/media_pic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/media_name"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            />

        <TextView
            android:id="@+id/media_date"
            android:layout_width="170dp"
            android:layout_height="25dp"
            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@id/media_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_pic"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/media_name"
            android:layout_width="170dp"
            android:layout_height="25dp"
            android:text="@string/name_surname"
            app:layout_constraintStart_toEndOf="@id/media_profile_pic"
            app:layout_constraintEnd_toStartOf="@id/media_date"
            app:layout_constraintTop_toBottomOf="@id/media_pic"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp" />

        <TextView
            android:id="@+id/media_text"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:text="@string/unspecified"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/media_profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp" />

        <ImageView
            android:id="@+id/media_pic"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:padding="3dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/media_profile_pic"
            app:srcCompat="@drawable/media_base"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="5dp"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>

        <ProgressBar
            android:id="@+id/media_progressbar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/media_pic"
            app:layout_constraintBottom_toBottomOf="@id/media_pic"
            app:layout_constraintStart_toStartOf="@id/media_pic"
            app:layout_constraintEnd_toEndOf="@id/media_pic"
            android:visibility="gone"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/media_b_remove"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/remove_media"
        app:layout_constraintTop_toBottomOf="@id/media_cl"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <Button
        android:id="@+id/media_b_goback"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:text="@string/go_back"
        app:layout_constraintTop_toBottomOf="@id/media_b_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>